# squash-pdf

./: .gitignore  README.md  pyproject.toml
src/squash_pdf/: cli.py
