[project]
name = "squash-pdf"
version = "0.1.0"
description = "Compress vector-heavy PDFs by rasterising their pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
]

[project.scripts]
squash-pdf = "squash_pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squash_pdf"]
